envoy.yml
listeners:
- name: listener_0
  address:
    socket_address: { address: 0.0.0.0, port_value: 8080 }
  filter_chains:
  - filters:
    - name: envoy.http_connection_manager
      config:
        codec_type: auto
        stat_prefix: ingress_http
        route_config:
          name: local_route
          virtual_hosts:
          - name: local_service
            domains: ["*"]
            routes:
            - match: { prefix: "/" }
              route: { cluster: echo_service }
        http_filters:
        - name: envoy.grpc_web
        - name: envoy.router
clusters:
- name: echo_service
  connect_timeout: 0.25s
  type: logical_dns
  http2_protocol_options: {}
  lb_policy: round_robin
  hosts: [{ socket_address: { address: node-server, port_value: 9090 }}]
